@@ -256,7 +256,14 @@ namespace MySql.Data.MySqlClient
             dt.Columns.Add("UNIQUE", typeof (bool));
             dt.Columns.Add("PRIMARY", typeof (bool));
 
-            DataTable tables = GetTables(restrictions);
+            // Get the list of tables first
+            int max = restrictions == null ? 4 : restrictions.Length;
+            string[] tableRestrictions = new string[Math.Max(max, 4)];
+            if (restrictions != null)
+                restrictions.CopyTo(tableRestrictions, 0);
+            tableRestrictions[3] = "BASE TABLE";
+            DataTable tables = GetTables(tableRestrictions);
+
             foreach (DataRow table in tables.Rows)
             {
                 string sql = String.Format("SHOW INDEX FROM `{0}`.`{1}`",
@@ -295,9 +302,11 @@ namespace MySql.Data.MySqlClient
             dt.Columns.Add("COLUMN_NAME", typeof (string));
             dt.Columns.Add("ORDINAL_POSITION", typeof (int));
 
-
-            string[] tableRestrictions = new string[Math.Max(restrictions.Length, 4)];
-            restrictions.CopyTo(tableRestrictions, 0);
+            // Get the list of tables first
+            int max = restrictions == null ? 4 : restrictions.Length;
+            string[] tableRestrictions = new string[Math.Max(max, 4)];
+            if (restrictions != null)
+                restrictions.CopyTo(tableRestrictions, 0);
             tableRestrictions[3] = "BASE TABLE";
             DataTable tables = GetTables(tableRestrictions);
 
@@ -544,7 +553,7 @@ namespace MySql.Data.MySqlClient
 
             DataTable dt = new DataTable("MetaDataCollections");
             dt.Columns.Add(new DataColumn("CollectionName", typeof (string)));
-            dt.Columns.Add(new DataColumn("NumberOfRestriction", typeof (int)));
+            dt.Columns.Add(new DataColumn("NumberOfRestrictions", typeof(int)));
             dt.Columns.Add(new DataColumn("NumberOfIdentifierParts", typeof (int)));
 
             FillTable(dt, collections);
